// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderProgressBar should render a progress component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <View>
    <React.Fragment>
      <Progress
        amount={0}
        goal={500}
        styleType="mountain-pink"
        type="steps"
      />
      <Progress
        amount={0}
        goal={700}
        previousGoal={500}
        styleType="mountain-pink"
        type="steps"
        width={50}
      />
      <Progress
        amount={0}
        goal={900}
        previousGoal={700}
        styleType="mountain-pink"
        type="steps"
        width={50}
      />
    </React.Fragment>
  </View>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <React.Fragment>
        <Progress
          amount={0}
          goal={500}
          styleType="mountain-pink"
          type="steps"
        />
        <Progress
          amount={0}
          goal={700}
          previousGoal={500}
          styleType="mountain-pink"
          type="steps"
          width={50}
        />
        <Progress
          amount={0}
          goal={900}
          previousGoal={700}
          styleType="mountain-pink"
          type="steps"
          width={50}
        />
      </React.Fragment>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Progress
            amount={0}
            goal={500}
            styleType="mountain-pink"
            type="steps"
          />,
          <Progress
            amount={0}
            goal={700}
            previousGoal={500}
            styleType="mountain-pink"
            type="steps"
            width={50}
          />,
          <Progress
            amount={0}
            goal={900}
            previousGoal={700}
            styleType="mountain-pink"
            type="steps"
            width={50}
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "amount": 0,
            "goal": 500,
            "styleType": "mountain-pink",
            "type": "steps",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "amount": 0,
            "goal": 700,
            "previousGoal": 500,
            "styleType": "mountain-pink",
            "type": "steps",
            "width": 50,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "amount": 0,
            "goal": 900,
            "previousGoal": 700,
            "styleType": "mountain-pink",
            "type": "steps",
            "width": 50,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
    "type": "View",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <React.Fragment>
          <Progress
            amount={0}
            goal={500}
            styleType="mountain-pink"
            type="steps"
          />
          <Progress
            amount={0}
            goal={700}
            previousGoal={500}
            styleType="mountain-pink"
            type="steps"
            width={50}
          />
          <Progress
            amount={0}
            goal={900}
            previousGoal={700}
            styleType="mountain-pink"
            type="steps"
            width={50}
          />
        </React.Fragment>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <Progress
              amount={0}
              goal={500}
              styleType="mountain-pink"
              type="steps"
            />,
            <Progress
              amount={0}
              goal={700}
              previousGoal={500}
              styleType="mountain-pink"
              type="steps"
              width={50}
            />,
            <Progress
              amount={0}
              goal={900}
              previousGoal={700}
              styleType="mountain-pink"
              type="steps"
              width={50}
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "amount": 0,
              "goal": 500,
              "styleType": "mountain-pink",
              "type": "steps",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "amount": 0,
              "goal": 700,
              "previousGoal": 500,
              "styleType": "mountain-pink",
              "type": "steps",
              "width": 50,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "amount": 0,
              "goal": 900,
              "previousGoal": 700,
              "styleType": "mountain-pink",
              "type": "steps",
              "width": 50,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": Symbol(react.fragment),
      },
      "type": "View",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`renderProgressLabel should return a component with Counter 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <View>
    <Counter
      textAfterValue="steps"
      textStyle={
        Object {
          "color": "black",
          "fontFamily": "Bariol-Bold",
          "fontSize": 80,
          "textAlign": "center",
        }
      }
      value={0}
    />
  </View>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Counter
        textAfterValue="steps"
        textStyle={
          Object {
            "color": "black",
            "fontFamily": "Bariol-Bold",
            "fontSize": 80,
            "textAlign": "center",
          }
        }
        value={0}
      />,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "textAfterValue": "steps",
        "textStyle": Object {
          "color": "black",
          "fontFamily": "Bariol-Bold",
          "fontSize": 80,
          "textAlign": "center",
        },
        "value": 0,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "View",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Counter
          textAfterValue="steps"
          textStyle={
            Object {
              "color": "black",
              "fontFamily": "Bariol-Bold",
              "fontSize": 80,
              "textAlign": "center",
            }
          }
          value={0}
        />,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "textAfterValue": "steps",
          "textStyle": Object {
            "color": "black",
            "fontFamily": "Bariol-Bold",
            "fontSize": 80,
            "textAlign": "center",
          },
          "value": 0,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "View",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`renderProgressLabel should return a component without counter 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <View>
    <Text
      style={
        Object {
          "color": "black",
          "fontFamily": "Bariol-Bold",
          "fontSize": 80,
          "textAlign": "center",
        }
      }
    >
      0 steps
    </Text>
  </View>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <Text
        style={
          Object {
            "color": "black",
            "fontFamily": "Bariol-Bold",
            "fontSize": 80,
            "textAlign": "center",
          }
        }
      >
        0 steps
      </Text>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "0 steps",
        "style": Object {
          "color": "black",
          "fontFamily": "Bariol-Bold",
          "fontSize": 80,
          "textAlign": "center",
        },
      },
      "ref": null,
      "rendered": "0 steps",
      "type": [Function],
    },
    "type": "View",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Text
          style={
            Object {
              "color": "black",
              "fontFamily": "Bariol-Bold",
              "fontSize": 80,
              "textAlign": "center",
            }
          }
        >
          0 steps
        </Text>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "0 steps",
          "style": Object {
            "color": "black",
            "fontFamily": "Bariol-Bold",
            "fontSize": 80,
            "textAlign": "center",
          },
        },
        "ref": null,
        "rendered": "0 steps",
        "type": [Function],
      },
      "type": "View",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`renderProgressLabel should return progress text for type minutes 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <View>
    <React.Fragment>
      <Text
        style={
          Object {
            "color": "black",
            "fontFamily": "Bariol-Bold",
            "fontSize": 80,
            "textAlign": "center",
          }
        }
      >
        08
      </Text>
      <Text
        style={
          Object {
            "color": "black",
            "lineHeight": 52,
            "marginHorizontal": 10,
          }
        }
      >
        min
      </Text>
      <Text
        style={
          Object {
            "color": "black",
            "fontFamily": "Bariol-Bold",
            "fontSize": 80,
            "textAlign": "center",
          }
        }
      >
        20
      </Text>
      <Text
        style={
          Object {
            "color": "black",
            "lineHeight": 52,
            "marginHorizontal": 10,
          }
        }
      >
        sec
      </Text>
    </React.Fragment>
  </View>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <React.Fragment>
        <Text
          style={
            Object {
              "color": "black",
              "fontFamily": "Bariol-Bold",
              "fontSize": 80,
              "textAlign": "center",
            }
          }
        >
          08
        </Text>
        <Text
          style={
            Object {
              "color": "black",
              "lineHeight": 52,
              "marginHorizontal": 10,
            }
          }
        >
          min
        </Text>
        <Text
          style={
            Object {
              "color": "black",
              "fontFamily": "Bariol-Bold",
              "fontSize": 80,
              "textAlign": "center",
            }
          }
        >
          20
        </Text>
        <Text
          style={
            Object {
              "color": "black",
              "lineHeight": 52,
              "marginHorizontal": 10,
            }
          }
        >
          sec
        </Text>
      </React.Fragment>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Text
            style={
              Object {
                "color": "black",
                "fontFamily": "Bariol-Bold",
                "fontSize": 80,
                "textAlign": "center",
              }
            }
          >
            08
          </Text>,
          <Text
            style={
              Object {
                "color": "black",
                "lineHeight": 52,
                "marginHorizontal": 10,
              }
            }
          >
            min
          </Text>,
          <Text
            style={
              Object {
                "color": "black",
                "fontFamily": "Bariol-Bold",
                "fontSize": 80,
                "textAlign": "center",
              }
            }
          >
            20
          </Text>,
          <Text
            style={
              Object {
                "color": "black",
                "lineHeight": 52,
                "marginHorizontal": 10,
              }
            }
          >
            sec
          </Text>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "08",
            "style": Object {
              "color": "black",
              "fontFamily": "Bariol-Bold",
              "fontSize": 80,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "08",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "min",
            "style": Object {
              "color": "black",
              "lineHeight": 52,
              "marginHorizontal": 10,
            },
          },
          "ref": null,
          "rendered": "min",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "20",
            "style": Object {
              "color": "black",
              "fontFamily": "Bariol-Bold",
              "fontSize": 80,
              "textAlign": "center",
            },
          },
          "ref": null,
          "rendered": "20",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "sec",
            "style": Object {
              "color": "black",
              "lineHeight": 52,
              "marginHorizontal": 10,
            },
          },
          "ref": null,
          "rendered": "sec",
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
    "type": "View",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <React.Fragment>
          <Text
            style={
              Object {
                "color": "black",
                "fontFamily": "Bariol-Bold",
                "fontSize": 80,
                "textAlign": "center",
              }
            }
          >
            08
          </Text>
          <Text
            style={
              Object {
                "color": "black",
                "lineHeight": 52,
                "marginHorizontal": 10,
              }
            }
          >
            min
          </Text>
          <Text
            style={
              Object {
                "color": "black",
                "fontFamily": "Bariol-Bold",
                "fontSize": 80,
                "textAlign": "center",
              }
            }
          >
            20
          </Text>
          <Text
            style={
              Object {
                "color": "black",
                "lineHeight": 52,
                "marginHorizontal": 10,
              }
            }
          >
            sec
          </Text>
        </React.Fragment>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <Text
              style={
                Object {
                  "color": "black",
                  "fontFamily": "Bariol-Bold",
                  "fontSize": 80,
                  "textAlign": "center",
                }
              }
            >
              08
            </Text>,
            <Text
              style={
                Object {
                  "color": "black",
                  "lineHeight": 52,
                  "marginHorizontal": 10,
                }
              }
            >
              min
            </Text>,
            <Text
              style={
                Object {
                  "color": "black",
                  "fontFamily": "Bariol-Bold",
                  "fontSize": 80,
                  "textAlign": "center",
                }
              }
            >
              20
            </Text>,
            <Text
              style={
                Object {
                  "color": "black",
                  "lineHeight": 52,
                  "marginHorizontal": 10,
                }
              }
            >
              sec
            </Text>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "08",
              "style": Object {
                "color": "black",
                "fontFamily": "Bariol-Bold",
                "fontSize": 80,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "08",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "min",
              "style": Object {
                "color": "black",
                "lineHeight": 52,
                "marginHorizontal": 10,
              },
            },
            "ref": null,
            "rendered": "min",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "20",
              "style": Object {
                "color": "black",
                "fontFamily": "Bariol-Bold",
                "fontSize": 80,
                "textAlign": "center",
              },
            },
            "ref": null,
            "rendered": "20",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "sec",
              "style": Object {
                "color": "black",
                "lineHeight": 52,
                "marginHorizontal": 10,
              },
            },
            "ref": null,
            "rendered": "sec",
            "type": [Function],
          },
        ],
        "type": Symbol(react.fragment),
      },
      "type": "View",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
